@startuml

!include ./colors.iuml

package "TWRP\Admin\General_Settings -- General Settings Creator" {
	class General_Settings_Factory <<public class>> <<Facade>> {
		+ display( $setting_name )
	}

	interface General_Settings_Creator <<private class>>
	class General_Select_Setting <<private class>>
	class General_Select_With_Switch_Setting <<private class>>
	class General_Text_Setting <<private class>>
	class General_Radio_Setting <<private class>>

	General_Settings_Factory --> General_Settings_Creator
	General_Settings_Creator <|.. General_Select_Setting
	General_Settings_Creator <|..  General_Text_Setting
	General_Settings_Creator <|.. General_Radio_Setting
	General_Select_Setting <|-l- General_Select_With_Switch_Setting
}
@enduml
